fix overflow position issue on stack expansion

--- a/public/css/StyleMatters.2024.css
+++ b/public/css/StyleMatters.2024.css
@@ -369,7 +369,7 @@ h2 {
 	flex-direction: column;
 	align-items: center;
 	width:100%;
-	padding-bottom: 80px;
+	padding-bottom: 0px;
 }
 
 .ampersand {
